--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "next": "^9.4.4",
     "prismic-reactjs": "^1.3.1",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "tiny-slider": "2.9.3"
   },
   "scripts": {
     "dev": "next dev",
